# antigravity-monitor-touchbar

./: .gitignore  CLAUDE.md  README.md  TouchBarApp.swift  cli_main.swift  pyproject.toml
agy_touchbar/: __init__.py  cli.py  client.py  parser.py
